--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "userseed": "node .\\seed\\User.seed.js"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
