--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "handlebars": "^4.7.7",
     "hbs": "^4.2.0",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
