--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "seed": "node .\\seed\\Main.seed.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
